@@ -15,6 +15,9 @@ See <<serdes>> for more information.
 Container Error handlers are now provided for both record and batch listeners that treat any exceptions thrown by the listener as fatal; they stop the container.
 See <<annotation-error-handling>> for more information.
 
+==== Stateful Retry
+
+Starting with _version 2.1.3_, stateful retry can be configured; see <<stateful-retry>> for more information.
 
 ==== Client ID
 
